flowcontroller/yamls/networkpolicy-allow-horizon-api-to-flow-api.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-horizon-api-to-flow-api
  annotations:
    flowDef:
      priority: 1
spec:
  policyTypes:
  - Ingress
  podSelector: 
    matchLabels:
        app: flow-api
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: horizon-api
      namespaceSelector:
        matchLabels:
          name: horizon-api
    ports:
    - protocol: TCP
      port: 80
